--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,60 @@ main > .tagline {
 	height: 2.65rem;
 }
 
+/* everything after this was created by andrew knox with help from Chat GPT, github: knox-dude */
+
 .hidden {
 	display: none;
+}
+
+.projects-container {
+  display: grid;
+  gap: 20px;
+  margin: 20px auto;
+  width: 90%;
+  grid-template-columns: repeat(2,1fr); /* Adjust the minimum width as needed */
+}
+
+.project-thumbnail-container {
+  text-align: center;
+  /* background-color: #fff; */
+  /* border: 1px solid #ddd; */
+  padding: 10px;
+  aspect-ratio: 3/2; /* Set the desired aspect ratio (3:2) */
+}
+
+.project-thumbnail-container a {
+	text-decoration: none;
+}
+
+.project-thumbnail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+	color: #fff;
+}
+
+.project-thumbnail img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover; /* To ensure the image maintains the aspect ratio within the card */
+}
+
+.project-thumbnail p {
+  margin: 10px 0;
+  font-size: 1rem;
+}
+
+.project-thumbnail h2 {
+	font-family: 'Reem Kufi', sans-serif;
+	font-size: 2rem;
+	margin: 10px 0;
+}
+
+/* Add a media query for smaller screens */
+@media (max-width: 768px) {
+  .projects-container {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    width: 100%;
+  }
 }
