--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 @layer components {
+  .top-navigation {
+    @apply mx-2 text-dark hover:text-ui-dark dark:text-light dark:hover:text-ui-dark hover:cursor-pointer
+  }
+  .text {
+    @apply text-dark dark:text-light
+  }
+  .ui {
+    @apply bg-light-dark dark:bg-dark-light
+  }
   .sidebar-icon {
     @apply relative flex items-center justify-center w-12 h-12 mt-2 mb-2 mx-auto shadow-lg bg-gray-800 text-green-500 hover:bg-green-700 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-200 ease-linear cursor-pointer;
   }
