forgot to commit my work

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,11 +12,7 @@
   .ui {
     @apply bg-light-dark dark:bg-dark-light
   }
-  .sidebar-icon {
-    @apply relative flex items-center justify-center w-12 h-12 mt-2 mb-2 mx-auto shadow-lg bg-gray-800 text-green-500 hover:bg-green-700 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-200 ease-linear cursor-pointer;
-  }
-
-  .sidebar-tooltip {
-    @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold transition-all duration-100 scale-0 origin-left;
+  .bg-image {
+    @apply -z-10 aspect-3/2 w-dvw -m-2 bg-no-repeat bg-center bg-cover bg-waves-svg
   }
 }
